# ECE408_Exercises

./: .clangd  .env  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  cuda_alias.h  docker-compose.yaml  matrix_print.h  run.sh
inc/: cuda_alias.hpp  ece408.hpp  fill_matrix.hpp  matrix_print.hpp  tools.hpp
include/: ece408.hpp  fill_matrix.hpp  matrix_print.h
matrix_multi/: Makefile  matrix_multi.cpp  matrix_multi_kernel.cu
matrix_multi_tile/: .gdb_history  CMakeLists.txt  Makefile  matrix_multi  matrix_multi.cpp  matrix_multi.cu  matrix_multi_kernel.cu  matrix_multi_tile.cu  matrix_same.cu  result
matrix_multi_tile_simple/: CMakeLists.txt  matrix_multi_tile_simple.cu
matrix_same/: CMakeLists.txt  matrix_same.cu
src/: CMakeLists.txt  convolution.cu  histogram.cu  mat_add.cu  mat_mul_coarse.cu  mat_transpose.cu  matrix_multi.cu  matrix_multi_tile.cu  matrix_multi_tile_simple.cu  matrix_same.cu  reduction.cu  stencil_kernel.cu  tools.cu  vector_multi.cu
test/: CMakeLists.txt  generate_matrix.py  props.cu  test_mat_add.cpp  test_mat_mul_coarse.cpp  test_mat_transpose.cpp  test_matrix_multi_tile.cpp  test_matrix_multi_tile_simple.cpp  test_matrix_same.cpp  test_reduction.cpp
vector_multi/: vector_multi  vector_multi.cpp  vector_multi.cu
